Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,11 @@ steps:
     npm install
     ng build --prod
   displayName: 'npm install and build'
+
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Pay-As-You-Go-1(12878f76-9141-4997-a45a-57feced15506)'
+    appType: 'webApp'
+    WebAppName: 'jw-form-builder'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/dist/FormBuilder'
