--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@ steps:
     npm install -g @angular/cli
     npm install
     ng build --prod
+    copy web.config dist/FormBuilder
   displayName: 'npm install and build'
 
 - task: AzureRmWebAppDeployment@4
