--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,7 @@ quote_type = single
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.cs]
+dotnet_sort_system_directives_first = true
+indent_size = 4
