--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
+dist
 /tmp
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
 
 # dependencies
-/node_modules
+node_modules
 
 # profiling files
 chrome-profiler-events*.json
@@ -25,7 +25,7 @@ speed-measure-plugin*.json
 
 # IDE - Visual Studio
 .vs
-/obj
+obj
 *.user
 launchSettings.json
 
