--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+    cwd FormBuilder
     npm install -g @angular/cli
     npm install
     ng build --prod
@@ -27,4 +28,4 @@ steps:
     azureSubscription: 'Pay-As-You-Go-1(12878f76-9141-4997-a45a-57feced15506)'
     appType: 'webApp'
     WebAppName: 'jw-form-builder'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/dist/FormBuilder'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/FormBuilder/dist/FormBuilder'
