--- a/FormBuilder/package.json
+++ b/FormBuilder/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@ngrx/effects": "^12.0.0",
+    "@ngrx/store": "^12.0.0",
+    "@ngrx/store-devtools": "^12.0.0",
     "rxjs": "^7.0.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
