Started rendering input types

--- a/FormBuilder/package.json
+++ b/FormBuilder/package.json
@@ -19,12 +19,14 @@
     "@angular/core": "~12.0.2",
     "@angular/forms": "~12.0.2",
     "@angular/material": "^12.0.2",
+    "@angular/material-moment-adapter": "^12.0.2",
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
     "@ngrx/effects": "^12.0.0",
     "@ngrx/store": "^12.0.0",
     "@ngrx/store-devtools": "^12.0.0",
+    "moment": "^2.29.1",
     "rxjs": "^7.1.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
