--- a/FormBuilder/package.json
+++ b/FormBuilder/package.json
@@ -27,7 +27,7 @@
     "@ngrx/store": "^12.0.0",
     "@ngrx/store-devtools": "^12.0.0",
     "moment": "^2.29.1",
-    "rxjs": "^7.1.0",
+    "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
