--- a/FormBuilder/package.json
+++ b/FormBuilder/package.json
@@ -28,19 +28,19 @@
     "@ngrx/store-devtools": "^12.1.0",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.4",
     "@angular/cli": "~12.0.4",
     "@angular/compiler-cli": "~12.0.4",
-    "@types/jasmine": "^3.7.6",
-    "@types/node": "^12.20.13",
+    "@types/jasmine": "^3.7.7",
+    "@types/node": "^12.20.15",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
+    "karma": "^6.3.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
