--- a/FormBuilder/package.json
+++ b/FormBuilder/package.json
@@ -12,6 +12,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^6.0.3",
+    "@angular-material-components/moment-adapter": "^6.0.0",
     "@angular/animations": "~12.0.4",
     "@angular/cdk": "^12.0.4",
     "@angular/common": "~12.0.4",
