--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,22 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  npm_config_cache: $(Pipeline.Workspace)/.npm
+
 steps:
 - task: NodeTool@0
   inputs:
     versionSpec: '14.x'
   displayName: 'Install Node.js'
+
+- task: Cache@2
+  inputs:
+    key: 'npm | "$(Agent.OS)" | package-lock.json'
+    restoreKeys: |
+       npm | "$(Agent.OS)"
+    path: $(npm_config_cache)
+  displayName: Cache npm
 
 - script: |
     cd FormBuilder
