--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
 
 - task: Cache@2
   inputs:
-    key: 'npm | "$(Agent.OS)" | package-lock.json'
+    key: 'npm | "$(Agent.OS)" | FormBuilder/package-lock.json'
     restoreKeys: |
        npm | "$(Agent.OS)"
     path: $(npm_config_cache)
