--- a/FormBuilder/package.json
+++ b/FormBuilder/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc --properties es2015 browser module main --first-only"
   },
   "private": true,
   "dependencies": {
