Display all item fields

--- a/FormBuilder/package.json
+++ b/FormBuilder/package.json
@@ -29,9 +29,11 @@
     "@ngrx/effects": "^12.3.0",
     "@ngrx/store": "^12.3.0",
     "@ngrx/store-devtools": "^12.3.0",
+    "@types/uuid": "^8.3.1",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
