--- a/FormBuilder/package.json
+++ b/FormBuilder/package.json
@@ -31,7 +31,7 @@
     "@ngrx/store-devtools": "^13.0.1",
     "@types/uuid": "^8.3.1",
     "moment": "^2.29.1",
-    "rxjs": "~6.6.0",
+    "rxjs": "7.4",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
